--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "api for users and posts from devplaceTalk project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "nodemon server.js"
   },
   "author": "lautaroRocha",
   "license": "ISC",
