--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "dptalk-api",
   "version": "1.0.0",
   "description": "api for users and posts from devplaceTalk project",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "author": "lautaroRocha",
   "license": "ISC",
