--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version" : 2,
         "builds": [
             {
-                "src": "serverx.js",
+                "src": "index.js",
                 "use": "@vercel/node"
             }
         ],
         "routes": [
             {
               "src": "/(.*)",
-              "dest": "server.js"
+              "dest": "index.js"
             }
         ]
 }
